# challenge1-data-science

./: AluraStoreBr.ipynb  README.md  pyproject.toml
